--- a/src/components/helpemall/HelpemAll.scss
+++ b/src/components/helpemall/HelpemAll.scss
@@ -6,7 +6,7 @@
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    background: transparent;
   
     /* Center slide text vertically */
     display: flex;
@@ -23,4 +23,67 @@
 
 
 
- 
+ .helpem{
+  display: flex;
+  flex-direction: column;
+  gap: 20px 0;
+ }
+
+
+ .helpem__main{
+  display: flex;
+  justify-content: space-between;
+ }
+
+
+ .helpem__content{
+  display: flex;
+  flex-direction: column;
+  max-width: 590px;
+  h2{
+    font-size: 36px;
+    font-weight: 300;
+    line-height: 1.3;
+    margin-bottom: 36px;
+    span{
+      color: var(--pl-font-color);
+    }
+  }
+  p{
+    font-size: 18px;
+  }
+  p:first-of-type{
+    margin-bottom: 9px;
+  }
+ }
+
+
+ .helpem__swiper{
+  max-width: 420px;
+  padding: 24px 0;
+  background-color: #F7FCFF;
+ }
+
+
+ .swiper__content{
+  padding: 40px 48px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+ }
+
+
+ .swiper-pagination-bullet{
+  background-color: var(--pl-font-color) !important;
+ }
+
+
+ .helpem__partners{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img{
+    height: 60px;
+  }
+ }
