--- a/src/components/practice-coding/PracticeCoding.scss
+++ b/src/components/practice-coding/PracticeCoding.scss
@@ -27,9 +27,14 @@
     p{
         font-size: 18px;
         margin-bottom: 9px;
+        color: #576871;
+        font-weight: 300;
     }
     button{
         margin-top: 24px;
+        &:hover{
+            cursor: pointer;
+        }
     }
 }
 
@@ -49,9 +54,14 @@
     p{
         font-size: 18px;
         margin-bottom: 9px;
+        color: #576871;
+        font-weight: 300;
     }
     button{
         margin-top: 24px;
+        &:hover{
+            cursor: pointer;
+        }
     }
 }
 
