coding three sections added

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
   --open-sans: "Open Sans", sans-serif;
   --pl-font-color: #068932;
   --pd-font-color: #1F1F20;
+  --sd-font-color: #576871;
+  --pb-bg-color: #f7fcff;
 
 }
 
