--- a/src/layouts/nav/Nav.scss
+++ b/src/layouts/nav/Nav.scss
@@ -82,6 +82,7 @@ nav{
 }
 .nav-logo{
     flex: 1;
+    margin-left: 20px;
     transition: .4s;
     .logo-image{
         max-width: 167px;
@@ -140,10 +141,14 @@ display: none;
 background-color: transparent;
 border: none;
 font-size: 26px;
+margin-right: 20px;
 margin-left: 22rem !important;
 }
 
 @media only screen and (max-width:1053px){
+    .nav__fixed{
+        top: calc(-55px);
+    }
     nav{
         position: relative;
         margin-top: 3.5rem;
@@ -167,10 +172,11 @@ margin-left: 22rem !important;
         padding: 1rem;
         align-items: flex-start !important;
         left: 0;
-        top: calc(100% + 50px);
+        top: calc(100% + 00px);
         overflow: auto;
-        z-index: 4;
+        z-index: 2;
         width: 100%;
+        height: 250px !important;
         row-gap: 27px !important;
         .item-link{
             font-size: 17px;
@@ -178,7 +184,7 @@ margin-left: 22rem !important;
     }
     .nav-actions{
         border-top: 1px solid #c5c5c5ee;
-        padding-top: 1rem;
+        padding: 1rem 1rem 0;
         flex-direction: column !important;
         row-gap: 20px;
         width: 100%;
@@ -207,7 +213,8 @@ margin-left: 22rem !important;
     background-color: #fff;
     height: 65px !important;
     position: absolute;
-    top: 62%;
+    // top: 22%
+    bottom: 12%;
     z-index: 10;
     .navigation__contact-link{
         display: none;
