--- a/src/layouts/nav/Nav.scss
+++ b/src/layouts/nav/Nav.scss
@@ -166,13 +166,13 @@ margin-left: 22rem !important;
         display: none;
     }
     .nav-menu{
-        background-color: rgb(255, 255, 255);
+        background-color: #ffffff;
         position: absolute;
         flex-direction: column;
         padding: 1rem;
         align-items: flex-start !important;
         left: 0;
-        top: calc(100% + 00px);
+        top: calc(100% + 20px);
         overflow: auto;
         z-index: 2;
         width: 100%;
@@ -189,8 +189,9 @@ margin-left: 22rem !important;
         row-gap: 20px;
         width: 100%;
         height: 240px;
+        z-index: 10;
         position: absolute;
-        top: calc(100% + 300px);    
+        top: calc(100% + 250px);    
         .developers-link{
             display: none;
         }
@@ -213,7 +214,6 @@ margin-left: 22rem !important;
     background-color: #fff;
     height: 65px !important;
     position: absolute;
-    // top: 22%
     bottom: 12%;
     z-index: 10;
     .navigation__contact-link{
@@ -221,7 +221,7 @@ margin-left: 22rem !important;
     }
     .navigation__login-link{
         display: flex;
-        margin: auto;
+        // margin: auto;
         justify-content: center !important;
         color: var(--pd-font-color);
         font-size: 16px;
