--- a/src/layouts/nav/Nav.scss
+++ b/src/layouts/nav/Nav.scss
@@ -125,8 +125,7 @@ nav{
             height: 80%;
             top: 3px;
             right: -15px;
-            background-color: transparent;
-            // #102739
+            background-color: #102739;
         }
     }
     .request-btn{
