--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -35,6 +35,7 @@
         align-items: center;
         margin: 2.5rem auto 0;
         .signup-btn, .demo-btn{
+            cursor: pointer;
             padding: .8rem 2.5rem;
         }
         .demo-btn{
